force-app/main/default/objects/Hyperlink_Config__c/Hyperlink_Config__c.object-meta.xml
<CustomObject>
    <label>Hyperlink Config</label>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hyperlink Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>