force-app/main/default/objects/Hyperlink_Config__c/fields/Divisi__c.field-meta.xml
<CustomField>
    <fullName>Divisi__c</fullName>
    <label>Divisi</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>