force-app/main/default/objects/Hyperlink_Config__c/fields/Is_Displayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Displayed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Displayed?</label>
    <type>Checkbox</type>
</CustomField>