force-app/main/default/objects/Hyperlink_Config__c/fields/Link_Formula__c.field-meta.xml
<CustomField>
    <fullName>Link_Formula__c</fullName>
    <formula>if ( ISPICKVAL(Type__c , &apos;Share Folder&apos;), 
  HYPERLINK(&quot;file:&quot; &amp; Link__c , Name, &apos;_blank&apos;),
  HYPERLINK(&quot;//&quot; &amp; Link__c , Name,&apos;_blank&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link Formula</label>
    <type>Text</type>
</CustomField>